anime-calendar に書き換える

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,19 @@
 .git
+.github
 .idea
-dist
+.next
+.yarn/cache
+.yarn/install-state.gz
 node_modules
-
+.dockerignore
+.editorconfig
 .env
+.env.example
+.gitignore
+.graphqlconfig
+.prettierrc.js
+codegen.yml
+Dockerfile
+LICENSE
+README.md
+renovate.json
