--- a/package.json
+++ b/package.json
@@ -65,6 +65,14 @@
   "eslintConfig": {
     "extends": [
       "@slashnephy/eslint-config"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unsafe-assignment": "off",
+      "@typescript-eslint/no-unsafe-call": "off",
+      "@typescript-eslint/no-unsafe-member-access": "off",
+      "@typescript-eslint/no-unsafe-return": "off",
+      "@typescript-eslint/no-unsafe-argument": "off",
+      "@typescript-eslint/restrict-template-expressions": "off"
+    }
   }
 }
