--- a/codegen.yml
+++ b/codegen.yml
@@ -1,26 +1,28 @@
 overwrite: true
 schema: graphql/generated/schema.graphql
 documents: graphql/*.graphql
+
 generates:
   graphql/generated/types.ts:
     plugins:
       - typescript
     config:
       scalars:
-        DateTime: Date
-    hooks:
-      afterOneFileWrite:
-        - prettier --write
+        DateTime: string
+      avoidOptionals: true
+      skipTypename: true
 
   graphql/generated/operations.ts:
     plugins:
       - typescript-operations
+    config:
+      scalars:
+        DateTime: string
+      avoidOptionals: true
+      skipTypename: true
     preset: import-types
     presetConfig:
       typesPath: ./types
-    hooks:
-      afterOneFileWrite:
-        - prettier --write
 
   graphql/generated/sdk.ts:
     plugins:
@@ -28,6 +30,7 @@ generates:
     preset: import-types
     presetConfig:
       typesPath: ./operations
-    hooks:
-      afterOneFileWrite:
-        - prettier --write
+
+hooks:
+  afterAllFileWrite:
+    - prettier --write graphql/generated
