--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format:eslint": "yarn lint:eslint --fix",
     "format:prettier": "yarn lint:prettier --write",
     "generate": "concurrently -n generate: -m 1 'yarn:generate:*'",
+    "generate:curl": "curl -o graphql/generated/schema.graphql https://raw.githubusercontent.com/kiraka/annict-web/main/app/graphql/beta/schema.graphql",
     "generate:graphql": "graphql-codegen --config codegen.yml",
-    "generate:introspect": "curl -o graphql/generated/schema.graphql https://raw.githubusercontent.com/kiraka/annict-web/main/app/graphql/beta/schema.graphql",
     "lint": "concurrently -n lint: 'yarn:lint:*'",
     "lint:eslint": "next lint",
     "lint:prettier": "prettier --check .",
