--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mantine/hooks": "5.4.1",
     "@mantine/next": "5.4.1",
     "@mantine/notifications": "5.4.1",
+    "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons": "1.100.0",
     "@tanstack/react-query": "4.10.1",
     "date-fns": "2.29.3",
@@ -36,7 +37,7 @@
     "graphql-request": "4.3.0",
     "js-yaml": "4.1.0",
     "next": "12.3.1",
-    "node-fetch": "3.2.10",
+    "next-auth": "4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
