--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -25,3 +25,5 @@ jobs:
     with:
       image-name: 'ghcr.io/slashnephy/annict-tracker'
       image-platforms: 'linux/amd64'
+      env: |
+        BUILD_DOCKER_IMAGE=1
