--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons": "1.101.0",
     "@tanstack/react-query": "4.10.1",
+    "cached_property": "0.1.2",
     "date-fns": "2.29.3",
     "fast-xml-parser": "4.0.11",
     "graphql-request": "4.3.0",
@@ -40,8 +41,7 @@
     "next": "12.3.1",
     "next-auth": "4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ts-method-cache": "3.3.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.7",
