--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "next": "12.3.1",
     "next-auth": "4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "0.7.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.13.7",
