--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc --noEmit",
     "build": "next build",
     "dev": "next dev",
     "format": "concurrently -n format: -m 1 'yarn:format:*'",
@@ -20,7 +19,8 @@
     "lint": "concurrently -n lint: 'yarn:lint:*'",
     "lint:eslint": "next lint",
     "lint:prettier": "prettier --check .",
-    "start": "next start"
+    "start": "next start",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "11.10.4",
