--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "format": "concurrently -n format: -m 1 'yarn:format:*'",
     "format:eslint": "yarn lint:eslint --fix",
     "format:prettier": "yarn lint:prettier --write",
-    "generate": "concurrently -n generate: -m 1 'yarn:generate:*'",
-    "generate:curl": "curl -o graphql/generated/schema.graphql https://raw.githubusercontent.com/kiraka/annict-web/main/app/graphql/beta/schema.graphql",
-    "generate:graphql": "graphql-codegen --config codegen.yml",
+    "generate": "concurrently -n generate: 'yarn:generate:*'",
+    "generate:graphql": "concurrently -n graphql: -m 1 'yarn:graphql:*'",
+    "graphql:annict:codegen": "graphql-codegen --config graphql/annict/codegen.yml",
+    "graphql:annict:schema": "curl -o graphql/annict/schema.graphql https://raw.githubusercontent.com/kiraka/annict-web/main/app/graphql/beta/schema.graphql",
     "lint": "concurrently -n lint: 'yarn:lint:*'",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
