--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "js-yaml": "4.1.0",
     "next": "12.3.1",
     "next-auth": "4.14.0",
+    "node-fetch": "3.2.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "0.7.6",
