--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons": "1.107.0",
     "@tanstack/react-query": "4.13.0",
+    "@vercel/analytics": "0.1.3",
     "cached_property": "0.1.2",
     "date-fns": "2.29.3",
     "fast-xml-parser": "4.0.11",
