--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
     "start": "next start",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "webhint": "hint http://localhost:3000"
   },
   "dependencies": {
     "@emotion/react": "11.10.5",
@@ -62,6 +63,7 @@
     "concurrently": "7.6.0",
     "eslint": "8.33.0",
     "graphql": "16.6.0",
+    "hint": "7.1.3",
     "prettier": "2.8.3",
     "typescript": "4.9.4"
   },
