--- a/package.json
+++ b/package.json
@@ -60,8 +60,14 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
     "concurrently": "8.0.1",
     "eslint": "8.38.0",
+    "eslint-plugin-deprecation": "1.4.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-unused-imports": "2.0.0",
     "graphql": "16.6.0",
     "hint": "7.1.8",
     "prettier": "2.8.7",
@@ -69,7 +75,7 @@
   },
   "packageManager": "yarn@3.4.1",
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "eslintConfig": {
     "extends": [
