--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "webhint": "hint http://localhost:3000"
   },
   "dependencies": {
-    "@emotion/react": "11.10.6",
+    "@emotion/react": "11.10.8",
     "@emotion/server": "11.10.0",
     "@mantine/core": "5.10.5",
     "@mantine/hooks": "5.10.5",
     "@mantine/next": "5.10.5",
     "@mantine/notifications": "5.10.5",
     "@slashnephy/typescript-extension": "0.2.3",
-    "@tabler/icons": "1.119.0",
-    "@tanstack/react-query": "4.29.3",
-    "@vercel/analytics": "0.1.11",
+    "@tabler/icons-react": "2.17.0",
+    "@tanstack/react-query": "4.29.5",
+    "@vercel/analytics": "1.0.0",
     "cached_property": "0.1.2",
-    "date-fns": "2.29.3",
+    "date-fns": "2.30.0",
     "fast-xml-parser": "4.2.2",
     "graphql-request": "6.0.0",
     "js-yaml": "4.1.0",
-    "next": "13.3.1",
+    "next": "13.3.2",
     "next-auth": "4.22.1",
     "node-fetch": "3.3.1",
     "react": "18.2.0",
