--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "fast-xml-parser": "4.2.2",
     "graphql-request": "6.0.0",
     "js-yaml": "4.1.0",
-    "next": "13.3.2",
+    "next": "13.4.1",
     "next-auth": "4.22.1",
     "node-fetch": "3.3.1",
     "react": "18.2.0",
@@ -51,7 +51,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.1",
     "@graphql-codegen/client-preset": "3.0.1",
-    "@slashnephy/eslint-config": "0.4.22",
+    "@slashnephy/eslint-config": "0.4.23",
     "@slashnephy/prettier-config": "0.1.16",
     "@types/js-yaml": "4.0.5",
     "@types/node": "18.16.6",
@@ -72,7 +72,7 @@
   },
   "packageManager": "yarn@3.5.1",
   "engines": {
-    "node": "18"
+    "node": ">=18"
   },
   "eslintConfig": {
     "extends": [
