--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "0.7.7",
-    "recoil-persist": "4.2.0"
+    "recoil-persist": "4.2.0",
+    "ts-array-length": "0.1.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
