--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "incremental": true,
     "useUnknownInCatchVariables": true,
     "experimentalDecorators": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
