--- a/package.json
+++ b/package.json
@@ -41,26 +41,31 @@
     "js-yaml": "4.1.0",
     "next": "13.4.19",
     "next-auth": "4.23.1",
+    "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "0.7.7",
     "recoil-persist": "5.1.0",
-    "ts-array-length": "0.1.2"
+    "ts-array-length": "0.1.2",
+    "zod": "3.22.2"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "4.20230904.0",
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@slashnephy/eslint-config": "1.0.6",
     "@slashnephy/prettier-config": "0.1.27",
     "@types/js-yaml": "4.0.5",
     "@types/node": "20.5.9",
+    "@types/query-string": "6.3.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "concurrently": "8.2.1",
     "eslint": "8.49.0",
     "graphql": "16.8.0",
     "prettier": "3.0.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "wrangler": "3.7.0"
   },
   "packageManager": "yarn@3.6.3",
   "engines": {
