--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "annict-tracker",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": "SlashNephy",
   "repository": {
     "type": "git",
     "url": "https://github.com/SlashNephy/annict-tracker"
   },
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
+    "build": "tsc && vite build",
+    "dev": "wrangler pages dev -- yarn dev:vite",
+    "dev:vite": "vite",
     "format": "concurrently -n format: -m 1 'yarn:format:*'",
     "format:eslint": "yarn lint:eslint --fix",
     "format:prettier": "yarn lint:prettier --write",
@@ -20,8 +22,7 @@
     "lint": "concurrently -n lint: 'yarn:lint:*'",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
-    "start": "next start",
-    "tsc": "tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@auth/core": "0.14.0",
@@ -34,16 +35,15 @@
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
     "@tanstack/react-query": "4.35.0",
-    "cached_property": "0.1.3",
     "date-fns": "2.30.0",
     "fast-xml-parser": "4.2.7",
     "graphql-request": "6.1.0",
     "js-yaml": "4.1.0",
-    "next": "13.4.19",
-    "next-auth": "4.23.1",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "1.3.0",
+    "react-router-dom": "6.16.0",
     "recoil": "0.7.7",
     "recoil-persist": "5.1.0",
     "ts-array-length": "0.1.2",
@@ -60,11 +60,13 @@
     "@types/query-string": "6.3.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react-swc": "3.3.2",
     "concurrently": "8.2.1",
     "eslint": "8.49.0",
     "graphql": "16.8.0",
     "prettier": "3.0.3",
     "typescript": "5.2.2",
+    "vite": "4.4.5",
     "wrangler": "3.7.0"
   },
   "packageManager": "yarn@3.6.3",
