--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true
   },
-  "include": ["graphql/annict/codegen.ts"]
+  "include": ["vite.config.ts", "graphql/annict/codegen.ts"]
 }
