フロントエンドを pages/ 以下に移動する

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -4,7 +4,15 @@
     "module": "esnext",
     "moduleResolution": "node",
     "lib": ["esnext"],
+    "jsx": "react-jsx",
     "types": ["@cloudflare/workers-types"],
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "strict": true,
     "allowImportingTsExtensions": true,
     "useUnknownInCatchVariables": true,
     "noUncheckedIndexedAccess": true,
