--- a/package.json
+++ b/package.json
@@ -1,89 +1,70 @@
 {
   "name": "annict-tracker",
-  "version": "0.0.0",
+  "private": true,
   "author": "SlashNephy",
+  "license": "MIT",
+  "scripts": {
+    "build": "yarn workspaces foreach -pi run build",
+    "dev": "yarn workspace functions dev",
+    "format": "concurrently -n format: -m 1 'yarn:format:*'",
+    "format:eslint": "yarn lint:eslint --fix",
+    "format:prettier": "yarn lint:prettier --write",
+    "lint": "concurrently -n lint: 'yarn:lint:*'",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier --check ."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/SlashNephy/annict-tracker"
   },
-  "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc && vite build",
-    "dev": "wrangler pages dev -- yarn dev:vite",
-    "dev:vite": "vite",
-    "format": "concurrently -n format: -m 1 'yarn:format:*'",
-    "format:eslint": "yarn lint:eslint --fix",
-    "format:prettier": "yarn lint:prettier --write",
-    "generate": "concurrently -n generate: 'yarn:generate:*'",
-    "generate:graphql": "concurrently -n graphql: -m 1 'yarn:graphql:*'",
-    "graphql:annict:codegen": "graphql-codegen --config graphql/annict/codegen.ts",
-    "graphql:annict:schema": "curl -o graphql/annict/schema.graphql https://raw.githubusercontent.com/kiraka/annict-web/main/app/graphql/beta/schema.graphql",
-    "lint": "concurrently -n lint: 'yarn:lint:*'",
-    "lint:eslint": "eslint .",
-    "lint:prettier": "prettier --check .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@auth/core": "0.14.0",
-    "@emotion/react": "11.11.1",
-    "@emotion/server": "11.11.0",
-    "@mantine/core": "6.0.20",
-    "@mantine/hooks": "6.0.20",
-    "@mantine/next": "6.0.20",
-    "@mantine/notifications": "6.0.20",
-    "@slashnephy/typescript-extension": "0.2.3",
-    "@tabler/icons-react": "2.34.0",
-    "@tanstack/react-query": "4.35.0",
-    "date-fns": "2.30.0",
-    "fast-xml-parser": "4.2.7",
-    "graphql-request": "6.1.0",
-    "js-yaml": "4.1.0",
-    "query-string": "8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-helmet-async": "1.3.0",
-    "react-router-dom": "6.16.0",
-    "recoil": "0.7.7",
-    "recoil-persist": "5.1.0",
-    "ts-array-length": "0.1.2",
-    "zod": "3.22.2"
-  },
+  "workspaces": [
+    "pages",
+    "functions"
+  ],
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20230904.0",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/client-preset": "4.1.0",
     "@slashnephy/eslint-config": "1.0.6",
     "@slashnephy/prettier-config": "0.1.27",
-    "@types/js-yaml": "4.0.5",
-    "@types/node": "20.5.9",
-    "@types/query-string": "6.3.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react-swc": "3.3.2",
     "concurrently": "8.2.1",
     "eslint": "8.49.0",
-    "graphql": "16.8.0",
-    "prettier": "3.0.3",
-    "typescript": "5.2.2",
-    "vite": "4.4.5",
-    "wrangler": "3.7.0"
-  },
-  "packageManager": "yarn@3.6.3",
-  "engines": {
-    "node": ">=18"
+    "eslint-import-resolver-typescript": "3.6.0",
+    "prettier": "3.0.3"
   },
   "eslintConfig": {
-    "extends": [
-      "@slashnephy/eslint-config"
-    ],
+    "extends": "@slashnephy/eslint-config",
+    "rules": {
+      "no-restricted-syntax": [
+        "error",
+        {
+          "selector": "TSEnumDeclaration"
+        }
+      ]
+    },
     "overrides": [
       {
         "files": "functions/**/*.ts",
         "parserOptions": {
-          "project": "functions/tsconfig.json"
+          "project": "./functions/tsconfig.json"
+        }
+      },
+      {
+        "files": [
+          "pages/src/**/*.{ts,tsx}",
+          "pages/graphql/*/generated/*.ts"
+        ],
+        "parserOptions": {
+          "project": "./pages/tsconfig.json"
+        }
+      },
+      {
+        "files": [
+          "pages/vite.config.ts",
+          "pages/graphql/*/codegen.ts"
+        ],
+        "parserOptions": {
+          "project": "./pages/tsconfig.node.json"
         }
       }
     ]
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
