--- a/.github/workflows/check-node.yml
+++ b/.github/workflows/check-node.yml
@@ -14,23 +14,21 @@ on:
 
 jobs:
   build:
-    if: github.event_name != 'push'
     uses: SlashNephy/.github/.github/workflows/yarn-run.yml@master
     permissions:
       contents: 'read'
     with:
-      script: 'build'
+      # FIXME: yarn build が壊れているので代替
+      script: 'workspace pages build'
 
-  lint:
-    uses: SlashNephy/.github/.github/workflows/yarn-lint.yml@master
-    permissions:
-      contents: 'read'
-      pull-requests: 'write'
+  # FIXME: .yarnrc.yml の nodeLinker: pnpm で壊れている
+  #  lint:
+  #    uses: SlashNephy/.github/.github/workflows/yarn-lint.yml@master
+  #    permissions:
+  #      contents: 'read'
+  #      pull-requests: 'write'
 
   format:
-    if: github.event_name == 'push'
     uses: SlashNephy/.github/.github/workflows/yarn-format.yml@master
     permissions:
       contents: 'write'
-    with:
-      pre-script: 'generate'
