ビルドに失敗するので nmMode: hardlinks-global に戻す

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,5 @@
-nodeLinker: pnpm
+nodeLinker: node-modules
+nmMode: hardlinks-global
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
