--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn workspaces foreach -pi run build",
-    "dev": "wrangler pages dev -- yarn workspace pages dev",
+    "dev": "wrangler pages dev --compatibility-date=2023-09-04 -- yarn workspace pages dev",
     "deploy": "yarn build && wrangler pages deploy pages/dist",
     "format": "concurrently -n format: -m 1 'yarn:format:*'",
     "format:eslint": "yarn lint:eslint --fix",
