--- a/pages/graphql/.graphqlconfig
+++ b/pages/graphql/.graphqlconfig
@@ -1,6 +1,6 @@
 {
   "name": "Annict GraphQL API",
-  "schemaPath": "schema.graphql",
+  "schemaPath": "annict.graphql",
   "extensions": {
     "endpoints": {
       "api.annict.com": {
