--- a/pages/tsconfig.node.json
+++ b/pages/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true
   },
-  "include": ["vite.config.ts", "graphql/annict/codegen.ts"]
+  "include": ["vite.config.ts"]
 }
