--- a/pages/package.json
+++ b/pages/package.json
@@ -21,6 +21,7 @@
     "js-yaml": "4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.11",
     "react-relay": "15.0.0",
     "react-router-dom": "6.16.0",
     "recoil": "0.7.7",
