--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,5 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-.dev.vars
-
-### yarn template
-# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
-
+# Yarn
+node_modules/
 .yarn/*
 !.yarn/releases
 !.yarn/patches
@@ -35,7 +7,15 @@ dist-ssr
 !.yarn/sdks
 !.yarn/versions
 
-# and uncomment the following lines
-# .pnp.*
+# Cloudflare Workers
+.dev.vars
 
+# TypeScript
 tsconfig.tsbuildinfo
+
+# Vite
+dist/
+
+# Relay
+/pages/src/__generated__/*
+!/pages/src/__generated__/.gitkeep
