--- a/pages/package.json
+++ b/pages/package.json
@@ -34,8 +34,9 @@
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-relay": "14.1.5",
     "@vitejs/plugin-react-swc": "3.3.2",
-    "graphql": "16.8.0",
+    "babel-plugin-relay": "15.0.0",
     "relay-compiler": "15.0.0",
     "typescript": "5.2.2",
     "vite": "4.4.9",
@@ -47,7 +48,9 @@
   },
   "relay": {
     "src": "./src",
-    "schema": "./graphql/annict.schema.graphql",
-    "language": "typescript"
+    "artifactDirectory": "./src/__generated__",
+    "schema": "./schema.graphql",
+    "language": "typescript",
+    "eagerEsModules": true
   }
 }
