--- a/pages/package.json
+++ b/pages/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "6.0.20",
     "@mantine/hooks": "6.0.20",
     "@mantine/notifications": "6.0.20",
+    "@sentry/react": "7.69.0",
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
     "@tanstack/react-query": "4.35.3",
