--- a/pages/package.json
+++ b/pages/package.json
@@ -31,6 +31,7 @@
     "ts-array-length": "0.1.2"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "2.7.1",
     "@types/js-yaml": "4.0.5",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
