Relay の設定を変更する - DateTime を string として扱う - %future added value を無効化する

--- a/pages/package.json
+++ b/pages/package.json
@@ -53,6 +53,10 @@
     "artifactDirectory": "./src/__generated__",
     "schema": "./schema.graphql",
     "language": "typescript",
-    "eagerEsModules": true
+    "eagerEsModules": true,
+    "customScalars": {
+      "DateTime": "string"
+    },
+    "noFutureProofEnums": true
   }
 }
