--- a/pages/package.json
+++ b/pages/package.json
@@ -19,20 +19,21 @@
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
     "date-fns": "2.30.0",
+    "jotai": "2.4.2",
     "js-yaml": "4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.11",
     "react-relay": "15.0.0",
     "react-router-dom": "6.16.0",
-    "recoil": "0.7.7",
-    "recoil-persist": "5.1.0",
     "relay-runtime": "15.0.0",
     "swr": "2.2.2",
     "ts-array-length": "0.1.2"
   },
   "devDependencies": {
     "@sentry/vite-plugin": "2.7.1",
+    "@swc-jotai/debug-label": "0.1.0",
+    "@swc-jotai/react-refresh": "0.1.0",
     "@types/js-yaml": "4.0.5",
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
