Mantine v7 にアップグレード

--- a/pages/tsconfig.json
+++ b/pages/tsconfig.json
@@ -3,6 +3,9 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "lib": ["esnext", "DOM", "DOM.Iterable"],
+    "allowJs": false,
+    "esModuleInterop": false,
+    "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "skipLibCheck": true,
     "moduleResolution": "bundler",
