--- a/pages/package.json
+++ b/pages/package.json
@@ -10,11 +10,9 @@
     "watch": "yarn generate --watch"
   },
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/server": "11.11.0",
-    "@mantine/core": "6.0.20",
-    "@mantine/hooks": "6.0.20",
-    "@mantine/notifications": "6.0.20",
+    "@mantine/core": "7.0.0",
+    "@mantine/hooks": "7.0.0",
+    "@mantine/notifications": "7.0.0",
     "@sentry/react": "7.69.0",
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
@@ -41,6 +39,9 @@
     "@types/react-relay": "14.1.5",
     "@vitejs/plugin-react-swc": "3.3.2",
     "babel-plugin-relay": "15.0.0",
+    "postcss": "8.4.30",
+    "postcss-preset-mantine": "1.7.0",
+    "postcss-simple-vars": "7.0.1",
     "relay-compiler": "15.0.0",
     "typescript": "5.2.2",
     "vite": "4.4.9",
