--- a/pages/package.json
+++ b/pages/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "7.0.0",
     "@mantine/hooks": "7.0.0",
     "@mantine/notifications": "7.0.0",
+    "@piotr-cz/swr-idb-cache": "1.0.1",
     "@sentry/react": "7.69.0",
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
@@ -24,6 +25,7 @@
     "react-error-boundary": "4.0.11",
     "react-relay": "15.0.0",
     "react-router-dom": "6.16.0",
+    "react-use-promise": "0.5.0",
     "relay-runtime": "15.0.0",
     "swr": "2.2.2",
     "ts-array-length": "0.1.2"
