--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@auth/core": "0.14.0",
+    "date-fns": "2.30.0",
     "fast-xml-parser": "4.2.7",
     "query-string": "8.1.0",
     "zod": "3.22.2"
