使うかわからないけど AniList のスキーマを置いておく

--- a/pages/graphql.config.yml
+++ b/pages/graphql.config.yml
@@ -1,8 +1,13 @@
-schema: schema.graphql
+schema:
+  - annict.schema.graphql
+  - anilist.schema.graphql
 extensions:
   endpoints:
     api.annict.com:
       url: https://api.annict.com/graphql
       headers:
         Authorization: Bearer ${ANNICT_ACCESS_TOKEN}
+      introspect: true
+    graphql.anilist.co:
+      url: https://graphql.anilist.co
       introspect: true
