--- a/functions/package.json
+++ b/functions/package.json
@@ -7,13 +7,16 @@
   },
   "dependencies": {
     "@auth/core": "0.14.0",
+    "cookie": "0.5.0",
     "date-fns": "2.30.0",
     "fast-xml-parser": "4.2.7",
+    "http-status-codes": "2.3.0",
     "query-string": "8.1.0",
     "zod": "3.22.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20230914.0",
+    "@types/cookie": "0.5.2",
     "@types/query-string": "6.3.0",
     "typescript": "5.2.2"
   },
