--- a/pages/package.json
+++ b/pages/package.json
@@ -10,6 +10,7 @@
     "watch": "yarn generate --watch"
   },
   "dependencies": {
+    "@mantine/colors-generator": "7.0.0",
     "@mantine/core": "7.0.0",
     "@mantine/hooks": "7.0.0",
     "@mantine/notifications": "7.0.0",
@@ -17,6 +18,7 @@
     "@sentry/react": "7.70.0",
     "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.34.0",
+    "chroma-js": "2.4.2",
     "date-fns": "2.30.0",
     "jotai": "2.4.2",
     "react": "18.2.0",
