--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
           "allowBitwiseExpressions": true
         }
       ],
-      "@typescript-eslint/no-unsafe-enum-comparison": "off"
+      "@typescript-eslint/no-unsafe-enum-comparison": "off",
+      "import/no-anonymous-default-export": "off"
     },
     "overrides": [
       {
