Vercel 用の移行ページを追加 (Close #649)

--- a/package.json
+++ b/package.json
@@ -58,11 +58,21 @@
         "parserOptions": {
           "project": "./pages/tsconfig.node.json"
         }
+      },
+      {
+        "files": "vercel/**/*.{ts,tsx}",
+        "parserOptions": {
+          "project": "./vercel/tsconfig.json"
+        },
+        "rules": {
+          "react-refresh/only-export-components": "off"
+        }
       }
     ]
   },
   "workspaces": [
     "pages",
-    "functions"
+    "functions",
+    "vercel"
   ]
 }
