--- a/vercel/package.json
+++ b/vercel/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.0.0",
+    "@mantine/hooks": "7.0.0",
     "@tabler/icons-react": "2.35.0",
     "next": "13.5.2",
     "react": "18.2.0",
