@slashnephy/typescript-extension やめる

--- a/pages/package.json
+++ b/pages/package.json
@@ -16,11 +16,11 @@
     "@mantine/hooks": "7.0.0",
     "@mantine/notifications": "7.0.0",
     "@sentry/react": "7.70.0",
-    "@slashnephy/typescript-extension": "0.2.3",
     "@tabler/icons-react": "2.35.0",
     "chroma-js": "2.4.2",
     "date-fns": "2.30.0",
     "jotai": "2.4.2",
+    "radash": "11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-relay": "15.0.0",
