--- a/package.json
+++ b/package.json
@@ -39,7 +39,14 @@
       ],
       "@typescript-eslint/no-unsafe-enum-comparison": "off",
       "import/no-anonymous-default-export": "off",
-      "no-void": "off"
+      "no-void": "off",
+      "yoda": [
+        "error",
+        "never",
+        {
+          "exceptRange": true
+        }
+      ]
     },
     "overrides": [
       {
