--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "8.2.1",
     "eslint": "8.50.0",
     "prettier": "3.0.3",
+    "vite-plugin-pwa": "0.16.5",
     "wrangler": "3.8.0"
   },
   "packageManager": "yarn@3.6.3",
