--- a/pages/package.json
+++ b/pages/package.json
@@ -11,10 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/colors-generator": "7.1.0",
-    "@mantine/core": "7.1.0",
-    "@mantine/hooks": "7.1.0",
-    "@mantine/notifications": "7.1.0",
+    "@mantine/colors-generator": "7.1.2",
+    "@mantine/core": "7.1.2",
+    "@mantine/form": "7.1.2",
+    "@mantine/hooks": "7.1.2",
+    "@mantine/notifications": "7.1.2",
     "@sentry/react": "7.70.0",
     "@tabler/icons-react": "2.38.0",
     "chroma-js": "2.4.2",
@@ -23,6 +24,7 @@
     "radash": "11.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.11",
     "react-relay": "15.0.0",
     "react-router-dom": "6.16.0",
     "relay-runtime": "15.0.0",
