--- a/.eslintignore
+++ b/.eslintignore
@@ -2,6 +2,7 @@ pages/src/__generated__/*.graphql.ts
 pages/dist/
 pages/vite.config.js
 pages/vite.config.d.ts
+pages/dev-dist/
 
 vercel/out/
 vercel/out/.next/
