--- a/pages/package.json
+++ b/pages/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "2.38.0",
     "chroma-js": "2.4.2",
     "date-fns": "2.30.0",
+    "immer": "10.0.3",
     "jotai": "2.4.3",
     "radash": "11.0.0",
     "react": "18.2.0",
