--- a/pages/package.json
+++ b/pages/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "7.1.2",
     "@mantine/hooks": "7.1.2",
     "@mantine/notifications": "7.1.2",
+    "@piotr-cz/swr-idb-cache": "1.0.1",
     "@sentry/react": "7.73.0",
     "@tabler/icons-react": "2.38.0",
     "chroma-js": "2.4.2",
@@ -28,6 +29,7 @@
     "react-error-boundary": "4.0.11",
     "react-relay": "15.0.0",
     "react-router-dom": "6.16.0",
+    "react-use-promise": "0.5.0",
     "relay-runtime": "15.0.0",
     "swr": "2.2.4",
     "ts-array-length": "0.1.2"
