--- a/pages/package.json
+++ b/pages/package.json
@@ -16,11 +16,11 @@
     "@mantine/form": "7.1.2",
     "@mantine/hooks": "7.1.2",
     "@mantine/notifications": "7.1.2",
-    "@piotr-cz/swr-idb-cache": "1.0.1",
     "@sentry/react": "7.73.0",
     "@tabler/icons-react": "2.38.0",
     "chroma-js": "2.4.2",
     "date-fns": "2.30.0",
+    "idb": "7.1.1",
     "immer": "10.0.3",
     "jotai": "2.4.3",
     "radash": "11.0.0",
