--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vercel"
   ],
   "scripts": {
-    "build": "yarn workspaces foreach -pi run build",
+    "build": "yarn workspaces foreach -piA run build",
     "deploy": "yarn build && wrangler pages deploy pages/dist",
     "dev": "wrangler pages dev --compatibility-date=2023-09-04 -- yarn workspace pages dev",
     "format": "concurrently -n format: -m 1 'yarn:format:*'",
@@ -67,5 +67,5 @@
     "prettier": "3.1.1",
     "wrangler": "3.19.0"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.0.2"
 }
