--- a/pages/package.json
+++ b/pages/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
-    "dev": "concurrently -k 'yarn:dev:*'",
-    "dev:relay": "yarn generate --watch",
+    "dev": "concurrently -k \"pnpm dev:relay\" \"pnpm dev:vite\"",
+    "dev:relay": "pnpm generate --watch",
     "dev:vite": "vite",
     "generate": "relay-compiler",
     "preview": "vite preview"
@@ -44,7 +44,6 @@
     "@types/react-relay": "16.0.6",
     "@vitejs/plugin-react-swc": "3.5.0",
     "babel-plugin-relay": "17.0.0",
-    "concurrently": "8.2.2",
     "postcss": "8.4.38",
     "postcss-preset-mantine": "1.15.0",
     "postcss-simple-vars": "7.0.1",
