--- a/pages/package.json
+++ b/pages/package.json
@@ -62,6 +62,9 @@
     "schema": "./schema.graphql",
     "language": "typescript",
     "eagerEsModules": true,
-    "noFutureProofEnums": true
+    "noFutureProofEnums": true,
+    "customScalarTypes": {
+      "DateTime": "string"
+    }
   }
 }
