--- a/pages/package.json
+++ b/pages/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pages",
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
