--- a/vercel/package.json
+++ b/vercel/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vercel",
   "version": "0.0.0",
+  "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
